--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "mgmtweb",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,7 +22,8 @@
     "express": "^4.19.2",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.2",
+    "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2"
-  }
+  },
+  "description": ""
 }
